# VISTA

./: train.py
DETR/: Untitled.ipynb  train.py
DETR/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  train-checkpoint.py
DETR/intrudernet_inference/: CMakeLists.txt
DETR/intrudernet_inference/src/: main.cpp
DETR/intrudernet_inference/test/: test.hpp
DETR/vista_inference/: CMakeLists.txt
DETR/vista_inference/inference/: inference.cpp  inference.h
DETR/vista_inference/output/: Thumbs.db
DETR/vista_inference/src/: main.cpp
DETR/vista_inference/test/: test.cpp  test_log.txt
ResNet18/: Untitled.ipynb  train.py
SSD/: Untitled.ipynb  train.py
